--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,16 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@fastify/cors": "^8.2.0",
+    "@prisma/client": "^4.8.1",
     "fastify": "^4.11.0"
   },
   "devDependencies": {
+    "prisma": "^4.8.1",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
   }
