--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "migrate:dev": "prisma migrate dev",
+    "db:gen": "prisma generate",
+    "seed": "prisma db seed"
   },
   "dependencies": {
     "@fastify/cors": "^8.2.0",
@@ -13,8 +16,13 @@
     "fastify": "^4.11.0"
   },
   "devDependencies": {
+    "@mermaid-js/mermaid-cli": "^9.3.0",
     "prisma": "^4.8.1",
+    "prisma-erd-generator": "^1.2.5",
     "tsx": "^3.12.2",
     "typescript": "^4.9.4"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   }
 }
